# libhello

./: CMakeLists.txt  README.md
include/: hello.h
src/: hello.cpp
tests/: CMakeLists.txt  test.cpp
